#
# Copyright (c) 2022 ZettaScale Technology
# Copyright (c) 2024 Vadzim Dambrouski
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#   Vadzim Dambrouski, <pftbest@gmail.com>
#

[package]
name = "zenoh-backend-sqlite"
version = "0.11.0-dev"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-sqlite"
homepage = "http://zenoh.io"
authors = [
  "Vadzim Dambrouski <pftbest@gmail.com>",
  "kydos <angelo@icorsaro.net>",
  "Julien Enoch <julien@enoch.fr>",
  "Olivier Hécart <olivier.hecart@zettascale.tech>",
  "Luca Cominardi <luca.cominardi@zettascale.tech>",
  "Sreeja Nair <sreeja.nair@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming", "database"]
description = "Backend for Zenoh using sqlite3"

[lib]
name = "zenoh_backend_sqlite"
crate-type = ["cdylib", "rlib"]

[features]
stats = ["zenoh/stats"]

[dependencies]
async-trait = "0.1.80"
git-version = "0.3.9"
serde_json = "1.0.115"
smol = "2.0.0"
tracing = "0.1.40"
uhlc = "0.7.0"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "main" }
zenoh-codec = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "main" }
zenoh_backend_traits = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "main" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "main" }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "main" }

[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
rusqlite = { version = "0.31.0" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
name = "zenoh-backend-sqlite"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = ["LICENSE", "0"]
depends = "zenoh-plugin-storage-manager (=0.11.0-dev-1)"
